Fixing overflow issues which handles space between posts

--- a/_sass/base/_page.scss
+++ b/_sass/base/_page.scss
@@ -40,3 +40,8 @@
 	.collapsible_post_h1 {
 		padding-top: 50px;
 	}
+
+
+	.clearfix {
+		overflow: hidden;
+	}
